SPM edit manuscript_introduction.html.erb excipit to explicit; updated transcriptions; recent edits to p.xml to l. 3155

--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -37,7 +37,7 @@
             <p class="ms-intro"><%= @incipit %></p>
         </div>
         <div class="col-6">
-            <p class="ms-intro-h2">Excipit</p>
+            <p class="ms-intro-h2">Explicit</p>
             <p class="ms-intro"><%= @explicit %></p>
         </div>
     </div>
